changed text to tel

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
 <div class="container">
     <label>
         Номер паспорта
-        <input id="pass-number" maxlength="9" placeholder="Номер паспорта (МЧЗ)" type="text">
+        <input id="pass-number" placeholder="Номер паспорта (МЧЗ)" type="tel">
         <input id="pass-submit" value="Проверить сумму" disabled type="submit">
         <p id="passNumSumResult"></p>
     </label>
 
     <label>
         Дата рождения
-        <input id="birthDate" maxlength="6" placeholder="Дата рождения (МЧЗ)" type="text">
+        <input id="birthDate" maxlength="6" placeholder="Дата рождения (МЧЗ)" type="tel">
         <input id="birthDate-submit" value="Проверить сумму" disabled type="submit">
         <p id="birthDateSumResult"></p>
     </label>
 
     <label>
         Дата окончания
-        <input id="issueDate" maxlength="6" placeholder="Дата окончания (МЧЗ)" type="text">
+        <input id="issueDate" maxlength="6" placeholder="Дата окончания (МЧЗ)" type="tel">
         <input id="issueDate-submit" value="Проверить сумму" disabled type="submit">
         <p id="issueDateSumResult"></p>
     </label>
